--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,9 @@
   
   */
 }
+* {
+  font-family: 'Josefin Sans', sans-serif;
+}
 
 body {
   margin: 0;
@@ -61,4 +64,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.hide-mobile {
+  display: none;
 }
