--- a/src/Todo/Todo.css
+++ b/src/Todo/Todo.css
@@ -1,3 +1,12 @@
 .todo {
   background-color: var(--very-light-gray-light);
+  border-bottom: solid 1px var(--light-grayish-blue-light);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.todo__text {
+  color: var(--very-dark-grayish-blue-light);
+  margin-top: 3px;
+  margin-left: 12px;
+  font-size: 18px;
 }
