--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,34 @@ code {
 .hide-mobile {
   display: none;
 }
+.container {
+  background-color: var(--very-light-gray-light);
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 7px;
+}
+.container__check-circle {
+  width: 22px;
+  height: 22px;
+  background-image: linear-gradient(
+    135deg,
+    hsl(192, 100%, 67%),
+    hsl(280, 87%, 65%)
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.container--create {
+  margin-bottom: 1rem;
+}
+.container__text {
+  margin-top: 3px;
+  margin-left: 12px;
+}
+
+.check-circle__check {
+  width: 11px;
+}
