--- a/src/TodoNavMobile/TodoNavMobile.css
+++ b/src/TodoNavMobile/TodoNavMobile.css
@@ -7,6 +7,7 @@
   justify-content: center;
   font-weight: bold;
   color: var(--dark-grayisgh-blue-light);
+  border-radius: 7px;
 }
 .todo-nav__text {
   cursor: pointer;
