--- a/src/Todo/Todo.css
+++ b/src/Todo/Todo.css
@@ -3,6 +3,7 @@
   border-bottom: solid 1px var(--light-grayish-blue-light);
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  cursor: pointer;
 }
 .todo__text {
   color: var(--very-dark-grayish-blue-light);
