--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -16,3 +16,9 @@
   letter-spacing: 0.75rem;
   margin: 0;
 }
+
+@media only screen and (min-width: 992px) {
+  .header {
+    background-image: url(../assets/backgrounds/bg-desktop-light.jpg);
+  }
+}
