--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -2,4 +2,6 @@
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   overflow: hidden;
+  min-height: 1rem;
+  background-color: var(--very-light-gray-light);
 }
