--- a/src/TodoListDisplayOptions/TodoListDisplayOptions.css
+++ b/src/TodoListDisplayOptions/TodoListDisplayOptions.css
@@ -1,7 +1,7 @@
 .container__status-navbar {
-  width: 60%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  border-radius: 7px;
 }
 .todo-nav {
   justify-content: center;
@@ -15,4 +15,15 @@
 }
 .todo-nav__text--active {
   color: var(--bright-blue);
+}
+.todo-nav__text--left {
+  margin: 0 auto 0 0;
+}
+.todo-nav__text--right {
+  margin: 0 0 0 auto;
+}
+@media only screen and (min-width: 992px) {
+  .container__status-navbar {
+    width: 60%;
+  }
 }
