--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
   text-align: center;
-  background-color: var(--very-light-grayish-blue-light);
+  background-color: var(--background);
   min-height: 100vh;
 }
