--- a/src/index.css
+++ b/src/index.css
@@ -128,13 +128,15 @@ code {
   cursor: pointer;
 }
 .container__check-circle--checked {
-  background-image: linear-gradient(
-    135deg,
-    hsl(192, 100%, 67%),
-    hsl(280, 87%, 65%)
-  );
+  background: linear-gradient(135deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
   outline: 0;
 }
+.container__check-circle--checked.container__check-circle:hover {
+  background: linear-gradient(135deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+  outline: 0;
+  border-color: var(--separator-inactive-text);
+}
+
 .container__check-circle:hover {
   background: linear-gradient(var(--todo-background), var(--todo-background))
       padding-box,
