--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,5 +1,4 @@
 .header {
-  background-image: url(../assets/backgrounds/bg-mobile-light.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 200px;
@@ -18,19 +17,25 @@
   margin: 0;
 }
 
-@media only screen and (min-width: 992px) {
+/* @media (min-width: 992px) and [data-theme='dark']{
   .header {
     background-image: url(../assets/backgrounds/bg-desktop-light.jpg);
+  }
+   {
+
+  }
+}
+@media (prefers-color-scheme: light) {
+  .header {
+    background-image: url(../assets/backgrounds/bg-mobile-dark.jpg);
   }
 }
 
 @media (prefers-color-scheme: dark) {
-  .header {
-    background-image: url(../assets/backgrounds/bg-mobile-dark.jpg);
-  }
+  
 }
 @media (prefers-color-scheme: dark) and (min-width: 992px) {
   .header {
     background-image: url(../assets/backgrounds/bg-desktop-dark.jpg);
   }
-}
+} */
